--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -1126,6 +1126,10 @@
         <source>Mail Templates</source>
         <target>Mail Skabeloner</target>
       </trans-unit>
+      <trans-unit id="282">
+        <source>Communication</source>
+        <target>Kommunikation</target>
+      </trans-unit>
 
     </body>
   </file>
